<!--
  ~ Beedio is an Android app for downloading videos
  ~ Copyright (C) 2019 Loremar Marabillas
  ~
  ~ This program is free software; you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation; either version 2 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along
  ~ with this program; if not, write to the Free Software Foundation, Inc.,
  ~ 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<resources>
    <string name="app_name">Shared UI</string>
    <string name="home">Home</string>
    <string name="nav_header_content_desc">Beedio Logo</string>
    <string name="browser">Browser</string>
    <string name="download">Download</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="action_go_to_home">ACTION_GO_TO_HOME</string>
    <string name="action_go_to_browser">ACTION_GO_TO_BROWSER</string>
    <string name="action_go_to_download">ACTION_GO_TO_DOWNLOAD</string>
</resources>
