<?xml version="1.0" encoding="utf-8"?><!--
  ~     Beedio is an Android app for downloading videos
  ~     Copyright (C) 2019 Loremar Marabillas
  ~
  ~     This program is free software; you can redistribute it and/or modify
  ~     it under the terms of the GNU General Public License as published by
  ~     the Free Software Foundation; either version 2 of the License, or
  ~     (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU General Public License for more details.
  ~
  ~     You should have received a copy of the GNU General Public License along
  ~     with this program; if not, write to the Free Software Foundation, Inc.,
  ~     51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="@string/home"
        android:icon="@drawable/ic_home_black_24dp" />
    <item
        android:title="@string/browser"
        android:icon="@drawable/ic_globe_black_24dp" />
    <item
        android:title="@string/download"
        android:icon="@drawable/ic_download_black_24dp" />
    <item
        android:title="@string/bookmarks"
        android:icon="@drawable/ic_star_black_24dp" />
    <item
        android:title="@string/history"
        android:icon="@drawable/ic_history_black_24dp" />
    <item
        android:title="@string/about"
        android:icon="@drawable/ic_info_outline_black_24dp" />

</menu>